[BUG #5145] mobileshowcase demo: Fixed unreadable touch area for iOS
git-svn-id: https://qooxdoo.svn.sourceforge.net/svnroot/qooxdoo/trunk@27785 61aaf1ca-a10e-0410-b9fb-ac63ec25887f

--- a/qooxdoo/application/mobileshowcase/source/resource/mobileshowcase/css/styles.css
+++ b/qooxdoo/application/mobileshowcase/source/resource/mobileshowcase/css/styles.css
@@ -1,6 +1,7 @@
 .eventcontainer {
   min-height:200px;
   background-color:green;
+  color:#ffffff;
 }
 
 .marginExpander {
